# Radar

./: .gitignore  README.md
arduino/src/radar/: radar.ino
arduino/test_echo/: test_echo.ino
arduino/test_servo/: test_servo.ino
arduino/test_servo_angle/: test_servo_angle.ino
desktop/: .qmlls.ini  CMakeLists.txt  Main.qml  main.cpp
desktop/qml/components/: Radar.qml
desktop/src/: serialcom.cpp  serialcom.h
